# Pomegranate-Editor

./: .gitignore  CMakeLists.txt  FindENet.cmake  LICENSE  README.md  imgui.ini  test.pscn
Include/Imgui/: imgui.cpp  imgui.h  imgui_draw.cpp
Include/Pomegranate/: audio.cpp  audio.h  color.cpp  color.h  debug.h  draw.cpp  ecs.cpp  ecs.h  ecs.inl  engine.cpp  event_system.cpp  event_system.h  input_manager.h  lua_wrapper.cpp  lua_wrapper.h  pomegranate.h  resource_manager.cpp  resource_manager.h  resource_manager.inl  standard_ecs.cpp  standard_ecs.h  standard_ecs_physics.cpp  standard_ecs_rendering.cpp  standard_ecs_rendering.h  standard_ecs_ui.cpp  texture.cpp  ttf_font.cpp  ttf_font.h  utils.h  vec_math.cpp  vec_math.h  window.cpp  window.h
Include/SDL3/: SDL_hints.h  SDL_test_compare.h  SDL_ttf.h
Include/mine/: mine.cc  mine.h
Include/openssl/: cmp.h  configuration.h  crypto.h  x509v3.h
engine/game_src/: CMakeLists.txt
engine/game_src/Include/: SDL.h  SDL_image.h  SDL_ttf.h
engine/game_src/Include/Imgui/: imgui.cpp  imgui_draw.cpp
engine/game_src/Include/Lua/: luajit.h
engine/game_src/Include/Pomegranate/: CMakeLists.txt  debug.cpp  draw.h  ecs.cpp  ecs.h  ecs.inl  engine.cpp  engine.h  event_system.inl  input_manager.cpp  lua_wrapper.cpp  lua_wrapper.h  pomegranate_type_names.h  resource_manager.cpp  resource_manager.h  standard_ecs.cpp  standard_ecs_physics.cpp  standard_ecs_physics.h  standard_ecs_rendering.cpp  standard_ecs_ui.h  texture.cpp  texture.h  vec_math.cpp
engine/game_src/Include/SDL3/: SDL_image.h  SDL_render.h
engine/game_src/Lib/Arm/: libSDL3.dylib  libSDL3_image.dylib  libSDL3_mixer.1.0.0.dylib  libSDL3_ttf.dylib  libluajit-5.1.dylib
engine/game_src/Lib/x64/: SDL3.lib  SDL3_test.lib  lua51.exp  lua51.lib
engine/game_src/src/: editor.cpp  editor.h  lua.cpp  main.cpp  scene.cpp  scene.h
engine/themes/: Dolphin.json  Light.json
engine_res/: old_theme.json  theme.json
res/: PlayerComponent.lua  PlayerController.lua  default.glsl
src/: audio.cpp  audio.h  compile_and_run.cpp  compile_and_run.h  components.cpp  editor.cpp  editor.h  editor_window.cpp  editor_window.h  entity_hierarchy_window.cpp  entity_hierarchy_window.h  extension_handler.cpp  extension_handler.h  hotkey_manager.cpp  hotkey_manager.h  inspector_window.cpp  inspector_window.h  live_share.cpp  live_share.h  lua.cpp  lua.h  lua.inl  main.cpp  menu_bar.cpp  menu_bar.h  notifications.cpp  notifications.h  resources_window.cpp  resources_window.h  run.cpp  run.h  scene.cpp  scene.h  scene_window.cpp  scene_window.h  theme.cpp  theme.h  utils.cpp  utils.h  vulkan.cpp  (+2 more)
src/Components/: components.cpp  particles.cpp
src/LiveShare/: live_share_shared_data.cpp  live_share_shared_data.h  server.cpp
src/gl/: Mesh.cpp  Mesh.h  shader.cpp  shader.h  shader.inl
